<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/nrnrthg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/rollno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="2"
            android:hint="@string/roll_no"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_message"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="2"
            android:hint="@string/branch"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rollno"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/blockname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="2"
            android:hint="@string/blockname"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/branch"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/phoneno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="2"
            android:hint="@string/phone_no"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blockname"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="2"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneno"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/project_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="2"
            android:hint="@string/project_title"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/domain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="2"
            android:hint="@string/domain"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/project_title"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextFields" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="2"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/domain"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextFields" />


        <Button
            android:id="@+id/ActivateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="48dp"
            android:text="@string/register_tag"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/ActivateButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="48dp"
            android:text="@string/attendance"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="36dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="2"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.094"
            tools:ignore="TextFields" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>